# k8s-service-updater

./: Dockerfile  README.md  pyproject.toml
src/k8s_service_updater/: __init__.py
